代码小调整